Apply changes to main scene

--- a/Assets/_Game/Code/GameDirectors/GameplayDirector/GameplayDirector.asmdef
+++ b/Assets/_Game/Code/GameDirectors/GameplayDirector/GameplayDirector.asmdef
@@ -7,7 +7,8 @@
         "GUID:f6f2a807ad21b0b4f9684f9ffb3caddc",
         "GUID:43463f909ec953d47b7f4514bc108813",
         "GUID:67f1f6438a8323f45a5113e493c86dd0",
-        "GUID:78effe730a0c5b242b176e54f69c83c5"
+        "GUID:78effe730a0c5b242b176e54f69c83c5",
+        "GUID:29debfb795b568d4db72537e5f741ba4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
